changes from JH...

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,11 +11,12 @@ of AgentSpeak in regards to goal orientation and declarative goals by
 ensuring that all reactive plans are also associated with general
 goals, providing a ``goal condition'' which means goals can be still
 active even though presently there is no action for the agent to take
-towards that goal, and allowing external events (i.e., reactions to
+towards that goal, and allowing external events (i.e. reactions to
 changes in beliefs) to trigger various plans, for all the goals it
-might be relevant.  We formalised the main changes required in the
-existing formal semantics of AgentSpeak and experimentally evaluated
-an interpreter for \aser\ implemented on top of the ASTRA platform.
+might be relevant.  The proposal was implemented and 
+ %formalised the main changes required in the
+%existing formal semantics of AgentSpeak and 
+experimentally evaluated on top of the ASTRA platform.
 
 As with any new programming language, there is much future work, some
 in fact ongoing. We are currently refining the ASTRA implementation,
