--- a/main.bib
+++ b/main.bib
@@ -1,113 +1,110 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Jomi Hubner at 2017-11-13 10:59:14 -0200 
+%% Created for Jomi Fred Hubner at 2018-05-08 22:25:46 -0300 
 
 
 %% Saved with string encoding Western (Windows Latin 1) 
 
-@Article{Sardina2011,
-author="Sardina, Sebastian
-and Padgham, Lin",
-title="A BDI agent programming language with failure handling, declarative goals, and planning",
-journal="Autonomous Agents and Multi-Agent Systems",
-year="2011",
-month="Jul",
-day="01",
-volume="23",
-number="1",
-pages="18--70",
-}
 
-@INPROCEEDINGS{5285116, 
-author={M. Dastani and B. Steunebrink}, 
-booktitle={2009 IEEE/WIC/ACM International Joint Conference on Web Intelligence and Intelligent Agent Technology}, 
-title={Modularity in BDI-Based Multi-agent Programming Languages}, 
-year={2009}, 
-volume={2}, 
-number={}, 
-pages={581-584}, 
-keywords={Computer languages;Conferences;Encapsulation;Intelligent agent;Lifting equipment;Multiagent systems;Paper technology;Programming profession;Proposals;Terminology;BDI Programming Languages;Modularity;Multi-Agent Programming Language;Multi-Agent Systems}, 
-doi={10.1109/WI-IAT.2009.214}, 
-ISSN={}, 
-month={Sept},}
 
+@incollection{RicciEPC,
+	Author = {Alessandro Ricci and Michele Piunti and Mirko Viroli and Andrea Omicini},
+	Booktitle = {Multi-Agent Programming: Languages, Tools and Applications},
+	Chapter = 8,
+	Date-Added = {2018-05-09 01:11:55 +0000},
+	Date-Modified = {2018-05-09 01:11:55 +0000},
+	Editor = {Bordini, Rafael H. and Dastani, Mehdi and Dix, J{\"u}rgen and El Fallah Seghrouchni, Amal},
+	Pages = {259--288},
+	Publisher = {Springer},
+	Title = {Environment Programming in {CArtAgO}},
+	Year = 2009}
+
+@article{Sardina2011,
+	Author = {Sardina, Sebastian and Padgham, Lin},
+	Day = {01},
+	Journal = {Autonomous Agents and Multi-Agent Systems},
+	Month = {Jul},
+	Number = {1},
+	Pages = {18--70},
+	Title = {A BDI agent programming language with failure handling, declarative goals, and planning},
+	Volume = {23},
+	Year = {2011}}
+
+@inproceedings{5285116,
+	Author = {M. Dastani and B. Steunebrink},
+	Booktitle = {2009 IEEE/WIC/ACM International Joint Conference on Web Intelligence and Intelligent Agent Technology},
+	Doi = {10.1109/WI-IAT.2009.214},
+	Keywords = {Computer languages;Conferences;Encapsulation;Intelligent agent;Lifting equipment;Multiagent systems;Paper technology;Programming profession;Proposals;Terminology;BDI Programming Languages;Modularity;Multi-Agent Programming Language;Multi-Agent Systems},
+	Month = {Sept},
+	Pages = {581-584},
+	Title = {Modularity in BDI-Based Multi-agent Programming Languages},
+	Volume = {2},
+	Year = {2009},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/WI-IAT.2009.214}}
 
 @inproceedings{Novak:2006:MBA:1160633.1160814,
- author = {Nov\'{a}k, Peter and Dix, J\"{u}rgen},
- title = {Modular BDI Architecture},
- booktitle = {Proceedings of the Fifth International Joint Conference on Autonomous Agents and Multiagent Systems},
- series = {AAMAS '06},
- year = {2006},
- isbn = {1-59593-303-4},
- location = {Hakodate, Japan},
- pages = {1009--1015},
- numpages = {7},
- url = {http://doi.acm.org/10.1145/1160633.1160814},
- doi = {10.1145/1160633.1160814},
- acmid = {1160814},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {BDI architecture, agent and multiagent architectures, agent programming languages, frameworks, infrastructures and environments for agent systems},
-} 
+	Acmid = {1160814},
+	Address = {New York, NY, USA},
+	Author = {Nov\'{a}k, Peter and Dix, J\"{u}rgen},
+	Booktitle = {Proceedings of the Fifth International Joint Conference on Autonomous Agents and Multiagent Systems},
+	Doi = {10.1145/1160633.1160814},
+	Isbn = {1-59593-303-4},
+	Keywords = {BDI architecture, agent and multiagent architectures, agent programming languages, frameworks, infrastructures and environments for agent systems},
+	Location = {Hakodate, Japan},
+	Numpages = {7},
+	Pages = {1009--1015},
+	Publisher = {ACM},
+	Series = {AAMAS '06},
+	Title = {Modular BDI Architecture},
+	Url = {http://doi.acm.org/10.1145/1160633.1160814},
+	Year = {2006},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1160633.1160814},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1160633.1160814}}
 
-@Inbook{Busetta2000,
-author="Busetta, Paolo and Howden, Nicholas and R{\"o}nnquist, Ralph and Hodgson, Andrew",
-editor="Jennings, Nicholas R. and Lesp{\'e}rance, Yves",
-title="Structuring BDI Agents in Functional Clusters",
-bookTitle="Intelligent Agents VI. Agent Theories, Architectures, and Languages: 6th International Workshop, ATAL'99, Orlando, Florida, USA, July 15-17, 1999. Proceedings",
-year="2000",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="277--289",
-}
+@inbook{Busetta2000,
+	Address = {Berlin, Heidelberg},
+	Author = {Busetta, Paolo and Howden, Nicholas and R{\"o}nnquist, Ralph and Hodgson, Andrew},
+	Booktitle = {Intelligent Agents VI. Agent Theories, Architectures, and Languages: 6th International Workshop, ATAL'99, Orlando, Florida, USA, July 15-17, 1999. Proceedings},
+	Editor = {Jennings, Nicholas R. and Lesp{\'e}rance, Yves},
+	Pages = {277--289},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Structuring BDI Agents in Functional Clusters},
+	Year = {2000}}
 
-
-
-
-@Inbook{Ortiz-Hernandez2016,
-author="Ortiz-Hern{\'a}ndez, Gustavo and H{\"u}bner, Jomi Fred and Bordini, Rafael H. and Guerra-Hern{\'a}ndez, Alejandro and Hoyos-Rivera, Guillermo J. and Cruz-Ram{\'i}rez, Nicandro",
-editor="Baldoni, Matteo and M{\"u}ller, J{\"o}rg P. and Nunes, Ingrid and Zalila-Wenkstern, Rym",
-title="A Namespace Approach for Modularity in BDI Programming Languages",
-bookTitle="Engineering Multi-Agent Systems: 4th International Workshop, EMAS 2016, Singapore, Singapore, May 9-10, 2016, Revised, Selected, and Invited Papers",
-year="2016",
-publisher="Springer International Publishing",
-address="Cham",
-pages="117--135",
-}
+@inbook{Ortiz-Hernandez2016,
+	Address = {Cham},
+	Author = {Ortiz-Hern{\'a}ndez, Gustavo and H{\"u}bner, Jomi Fred and Bordini, Rafael H. and Guerra-Hern{\'a}ndez, Alejandro and Hoyos-Rivera, Guillermo J. and Cruz-Ram{\'\i}rez, Nicandro},
+	Booktitle = {Engineering Multi-Agent Systems: 4th International Workshop, EMAS 2016, Singapore, Singapore, May 9-10, 2016, Revised, Selected, and Invited Papers},
+	Editor = {Baldoni, Matteo and M{\"u}ller, J{\"o}rg P. and Nunes, Ingrid and Zalila-Wenkstern, Rym},
+	Pages = {117--135},
+	Publisher = {Springer International Publishing},
+	Title = {A Namespace Approach for Modularity in BDI Programming Languages},
+	Year = {2016}}
 
 @inproceedings{vanRiemsdijk:2006:GMA:1160633.1160864,
- author = {van Riemsdijk, M. Birna and Dastani, Mehdi and Meyer, John-Jules Ch. and de Boer, Frank S.},
- title = {Goal-oriented Modularity in Agent Programming},
- booktitle = {Proceedings of the Fifth International Joint Conference on Autonomous Agents and Multiagent Systems},
- series = {AAMAS '06},
- year = {2006},
- isbn = {1-59593-303-4},
- location = {Hakodate, Japan},
- pages = {1271--1278},
- numpages = {8},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {agent programming languages, declarative goals, modularity, semantics},
-}
+	Address = {New York, NY, USA},
+	Author = {van Riemsdijk, M. Birna and Dastani, Mehdi and Meyer, John-Jules Ch. and de Boer, Frank S.},
+	Booktitle = {Proceedings of the Fifth International Joint Conference on Autonomous Agents and Multiagent Systems},
+	Isbn = {1-59593-303-4},
+	Keywords = {agent programming languages, declarative goals, modularity, semantics},
+	Location = {Hakodate, Japan},
+	Numpages = {8},
+	Pages = {1271--1278},
+	Publisher = {ACM},
+	Series = {AAMAS '06},
+	Title = {Goal-oriented Modularity in Agent Programming},
+	Year = {2006}}
 
-@Inbook{Hindriks2008,
-author="Hindriks, Koen",
-editor="Dastani, Mehdi and El Fallah Seghrouchni, Amal and Ricci, Alessandro
-and Winikoff, Michael",
-title="Modules as Policy-Based Intentions: Modular Agent Programming in GOAL",
-bookTitle="Programming Multi-Agent Systems: 5th International Workshop, ProMAS 2007 Honolulu, HI, USA, May 15, 2007 Revised and Invited Papers",
-year="2008",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="156--171",
-}
-
-
-
-%%%%%
-
+@inbook{Hindriks2008,
+	Address = {Berlin, Heidelberg},
+	Author = {Hindriks, Koen},
+	Booktitle = {Programming Multi-Agent Systems: 5th International Workshop, ProMAS 2007 Honolulu, HI, USA, May 15, 2007 Revised and Invited Papers},
+	Editor = {Dastani, Mehdi and El Fallah Seghrouchni, Amal and Ricci, Alessandro and Winikoff, Michael},
+	Pages = {156--171},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Modules as Policy-Based Intentions: Modular Agent Programming in GOAL},
+	Year = {2008}}
 
 @inproceedings{hubner:06b,
 	Author = {Jomi Fred H{\"u}bner and Rafael H. Bordini and Michael Wooldridge},
@@ -205,15 +202,14 @@ pages="156--171",
 	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=1863766.1863818}}
 
 @article{boissier2013multi,
-  title={Multi-agent oriented programming with {JaCaMo}},
-  author={Boissier, Olivier and Bordini, Rafael H and H{\"u}bner, Jomi F and Ricci, Alessandro and Santi, Andrea},
-  journal={Science of Computer Programming},
-  volume={78},
-  number={6},
-  pages={747--761},
-  year={2013},
-  publisher={Elsevier}
-}
+	Author = {Boissier, Olivier and Bordini, Rafael H and H{\"u}bner, Jomi F and Ricci, Alessandro and Santi, Andrea},
+	Journal = {Science of Computer Programming},
+	Number = {6},
+	Pages = {747--761},
+	Publisher = {Elsevier},
+	Title = {Multi-agent oriented programming with {JaCaMo}},
+	Volume = {78},
+	Year = {2013}}
 
 @inproceedings{DBLP:conf/atal/LoganTY17,
 	Author = {Brian Logan and John Thangarajah and Neil Yorke{-}Smith},
@@ -248,7 +244,8 @@ pages="156--171",
 
 @inproceedings{DBLP:conf/prima/CollierRL15,
 	Author = {Rem W. Collier and Sean Edward Russell and David Lillis},
-	Booktitle = {{PRIMA} 2015: Principles and Practice of Multi-Agent Systems - 18th International Conference, Bertinoro, Italy, October 26-30, 2015, Proceedings},
+	Booktitle = {{PRIMA} 2015: Principles and Practice of Multi-Agent Systems - 18th International Conference, Bertinoro, Italy, 2015, Proceedings},
+	Date-Modified = {2018-05-09 01:24:41 +0000},
 	Editor = {Qingliang Chen and Paolo Torroni and Serena Villata and Jane Yung{-}jen Hsu and Andrea Omicini},
 	Pages = {351--366},
 	Publisher = {Springer},
@@ -315,111 +312,90 @@ pages="156--171",
 	Year = {2004}}
 
 @inproceedings{DBLP:conf/kr/WinikoffPHT02,
-  author    = {Michael Winikoff and
-               Lin Padgham and
-               James Harland and
-               John Thangarajah},
-  title     = {Declarative {\&} Procedural Goals in Intelligent Agent Systems},
-  booktitle = {Proceedings of the Eights International Conference on Principles and
-               Knowledge Representation and Reasoning (KR-02), Toulouse, France,
-               April 22-25, 2002},
-  pages     = {470--481},
-  year      = {2002},
-  crossref  = {DBLP:conf/kr/2002},
-  timestamp = {Tue, 22 Jul 2003 15:58:10 +0200},
-  biburl    = {http://dblp.org/rec/bib/conf/kr/WinikoffPHT02},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Author = {Michael Winikoff and Lin Padgham and James Harland and John Thangarajah},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.org/rec/bib/conf/kr/WinikoffPHT02},
+	Booktitle = {Proceedings of the Eights International Conference on Principles and Knowledge Representation and Reasoning (KR-02), Toulouse, France, April 22-25, 2002},
+	Crossref = {DBLP:conf/kr/2002},
+	Pages = {470--481},
+	Timestamp = {Tue, 22 Jul 2003 15:58:10 +0200},
+	Title = {Declarative {\&} Procedural Goals in Intelligent Agent Systems},
+	Year = {2002}}
+
 @proceedings{DBLP:conf/kr/2002,
-  editor    = {Dieter Fensel and
-               Fausto Giunchiglia and
-               Deborah L. McGuinness and
-               Mary{-}Anne Williams},
-  title     = {Proceedings of the Eights International Conference on Principles and
-               Knowledge Representation and Reasoning (KR-02), Toulouse, France,
-               April 22-25, 2002},
-  publisher = {Morgan Kaufmann},
-  year      = {2002},
-  isbn      = {1-55860-554-1},
-  timestamp = {Tue, 22 Jul 2003 15:20:23 +0200},
-  biburl    = {http://dblp.org/rec/bib/conf/kr/2002},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.org/rec/bib/conf/kr/2002},
+	Editor = {Dieter Fensel and Fausto Giunchiglia and Deborah L. McGuinness and Mary{-}Anne Williams},
+	Isbn = {1-55860-554-1},
+	Publisher = {Morgan Kaufmann},
+	Timestamp = {Tue, 22 Jul 2003 15:20:23 +0200},
+	Title = {Proceedings of the Eights International Conference on Principles and Knowledge Representation and Reasoning (KR-02), Toulouse, France, April 22-25, 2002},
+	Year = {2002}}
 
 @inproceedings{DBLP:conf/promas/DennisFBFW07,
-  author    = {Louise A. Dennis and
-               Berndt Farwer and
-               Rafael H. Bordini and
-               Michael Fisher and
-               Michael Wooldridge},
-  title     = {A Common Semantic Basis for {BDI} Languages},
-  booktitle = {Programming Multi-Agent Systems, 5th International Workshop, ProMAS
-               2007, Honolulu, HI, USA, May 15, 2007, Revised and Invited Papers},
-  pages     = {124--139},
-  year      = {2007},
-  crossref  = {DBLP:conf/promas/2007},
-  url       = {https://doi.org/10.1007/978-3-540-79043-3_8},
-  doi       = {10.1007/978-3-540-79043-3_8},
-  timestamp = {Mon, 05 Jun 2017 12:41:20 +0200},
-  biburl    = {http://dblp.org/rec/bib/conf/promas/DennisFBFW07},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Author = {Louise A. Dennis and Berndt Farwer and Rafael H. Bordini and Michael Fisher and Michael Wooldridge},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.org/rec/bib/conf/promas/DennisFBFW07},
+	Booktitle = {Programming Multi-Agent Systems, 5th International Workshop, ProMAS 2007, USA, 2007, Revised and Invited Papers},
+	Crossref = {DBLP:conf/promas/2007},
+	Date-Modified = {2018-05-09 01:25:46 +0000},
+	Doi = {10.1007/978-3-540-79043-3_8},
+	Pages = {124--139},
+	Timestamp = {Mon, 05 Jun 2017 12:41:20 +0200},
+	Title = {A Common Semantic Basis for {BDI} Languages},
+	Url = {https://doi.org/10.1007/978-3-540-79043-3_8},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-540-79043-3_8},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-3-540-79043-3_8}}
+
 @proceedings{DBLP:conf/promas/2007,
-  editor    = {Mehdi Dastani and
-               Amal El Fallah{-}Seghrouchni and
-               Alessandro Ricci and
-               Michael Winikoff},
-  title     = {Programming Multi-Agent Systems, 5th International Workshop, ProMAS
-               2007, Honolulu, HI, USA, May 15, 2007, Revised and Invited Papers},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {4908},
-  publisher = {Springer},
-  year      = {2008},
-  url       = {https://doi.org/10.1007/978-3-540-79043-3},
-  doi       = {10.1007/978-3-540-79043-3},
-  isbn      = {978-3-540-79042-6},
-  timestamp = {Fri, 02 Jun 2017 13:01:07 +0200},
-  biburl    = {http://dblp.org/rec/bib/conf/promas/2007},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.org/rec/bib/conf/promas/2007},
+	Doi = {10.1007/978-3-540-79043-3},
+	Editor = {Mehdi Dastani and Amal El Fallah{-}Seghrouchni and Alessandro Ricci and Michael Winikoff},
+	Isbn = {978-3-540-79042-6},
+	Publisher = {Springer},
+	Series = {Lecture Notes in Computer Science},
+	Timestamp = {Fri, 02 Jun 2017 13:01:07 +0200},
+	Title = {Programming Multi-Agent Systems, 5th International Workshop, ProMAS 2007, Honolulu, HI, USA, May 15, 2007, Revised and Invited Papers},
+	Url = {https://doi.org/10.1007/978-3-540-79043-3},
+	Volume = {4908},
+	Year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-540-79043-3},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-3-540-79043-3}}
 
 @article{DBLP:journals/aamas/BordiniFVW06,
-  author    = {Rafael H. Bordini and
-               Michael Fisher and
-               Willem Visser and
-               Michael Wooldridge},
-  title     = {Verifying Multi-agent Programs by Model Checking},
-  journal   = {Autonomous Agents and Multi-Agent Systems},
-  volume    = {12},
-  number    = {2},
-  pages     = {239--256},
-  year      = {2006},
-  url       = {https://doi.org/10.1007/s10458-006-5955-7},
-  doi       = {10.1007/s10458-006-5955-7},
-  timestamp = {Sat, 20 May 2017 00:23:00 +0200},
-  biburl    = {http://dblp.org/rec/bib/journals/aamas/BordiniFVW06},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
+	Author = {Rafael H. Bordini and Michael Fisher and Willem Visser and Michael Wooldridge},
+	Bibsource = {dblp computer science bibliography, http://dblp.org},
+	Biburl = {http://dblp.org/rec/bib/journals/aamas/BordiniFVW06},
+	Doi = {10.1007/s10458-006-5955-7},
+	Journal = {Autonomous Agents and Multi-Agent Systems},
+	Number = {2},
+	Pages = {239--256},
+	Timestamp = {Sat, 20 May 2017 00:23:00 +0200},
+	Title = {Verifying Multi-agent Programs by Model Checking},
+	Url = {https://doi.org/10.1007/s10458-006-5955-7},
+	Volume = {12},
+	Year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10458-006-5955-7},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1007/s10458-006-5955-7}}
 
-@Article{Albrecht18,
-  author = 	 {Tobias Ahlbrecht and Niklas Fiekas and J{\"{u}}rgen Dix },
-  title = 	 {Multi-Agent Programming Contest 2016},
-  journal = 	 {International Journal of Agent Oriented Software Engineering},
-  year = 	 2018,
-  note = 	 {To appear}
-  }
+@article{Albrecht18,
+	Author = {Tobias Ahlbrecht and Niklas Fiekas and J{\"{u}}rgen Dix},
+	Journal = {International Journal of Agent Oriented Software Engineering},
+	Note = {To appear},
+	Title = {Multi-Agent Programming Contest 2016},
+	Year = 2018}
 
 @article{challet2013minority,
-  title={Minority games: interacting agents in financial markets},
-  author={Challet, Damien and Marsili, Matteo and Zhang, Yi-Cheng and others},
-  journal={OUP Catalogue},
-  year={2013},
-  publisher={Oxford University Press}
-}
+	Author = {Challet, Damien and Marsili, Matteo and Zhang, Yi-Cheng and others},
+	Journal = {OUP Catalogue},
+	Publisher = {Oxford University Press},
+	Title = {Minority games: interacting agents in financial markets},
+	Year = {2013}}
 
 @techreport{chmura2004minority,
-  title={Minority game: Experiments and simulations of traffic scenarios},
-  author={Chmura, Thorsten and Pitz, Thomas},
-  year={2004},
-  institution={Bonn econ discussion papers}
-}
+	Author = {Chmura, Thorsten and Pitz, Thomas},
+	Institution = {Bonn econ discussion papers},
+	Title = {Minority game: Experiments and simulations of traffic scenarios},
+	Year = {2004}}
