--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,34 @@
 
 %\subtitlenote{The full version of the author's guide is available as \texttt{acmart.pdf} document}
 
-\author{XXX}
+\author{Alessandro Ricci\inst{1} \and Rafael H. Bordini\inst{2} \and  Jomi F. H\"ubner\inst{3} \and Rem Collier\inst{4}}
+%\orcid{1234-5678-9012}
+\institute{DISI, University of Bologna,
+%  \streetaddress{Via Sacchi, 3}
+ % \city{Cesena} 
+  %\state{Italy} 
+  % \postcode{47521}
+\email{a.ricci@unibo.it}
+\and
+POLI-PUCRS,
+%  \streetaddress{Av. Ipiranga, 6681}
+ % \city{Porto Alegre, RS} 
+  % \postcode{90619-900}
+  %\state{Brazil} 
+\email{r.bordini@pucrs.br}
+\and
+Federal University of Santa Catarina,
+  %\streetaddress{PO Box 476}
+  %\city{Florianópolis, SC} 
+  %\postcode{88040-900}
+  %\country{Brasil}
+\email{jomi.hubner@ufsc.br}
+\and
+University College of Dublin,
+%  \city{Dublin}
+ % \country{Ireland}
+\email{rem.collier@ucd.ie}}
+
 
 \maketitle
 
@@ -61,8 +88,8 @@
   style of BDI agent programming along relevant aspects, including
   program modularity and readability, failure handling, and reactive
   as well as goal-based reasoning. The paper introduces the novel
-  language, formalises the changes in the usual semantics of
-  AgentSpeak, illustrate the features of the language through
+  language based on AgentSpeak, %, formalises the changes in the usual semantics of AgentSpeak, 
+  illustrates the features of the language through
   examples, and shows results of experiments evaluating the proposed
   language.
 \end{abstract}
