--- a/problem.tex
+++ b/problem.tex
@@ -4,18 +4,18 @@
 The main motivation behind {\aser} comes from the experience using
 agent programming languages based on the {\asl} model, {\jason} and
 ASTRA in particular.
-%
+%%
 Yet, these issues are relevant for any language based on the BDI
 architecture.
-%
-The first issue is about the plan model.
+%%
+%The first issue is about the plan model.
 
 % \subsection{Plan encapsulation}
 %
-In the BDI model, plans are meant to specify the means by which an
-agent should satisfy an end~\cite{Rao96}.
+In the BDI model, plans are meant to specify some means by which an
+agent can satisfy an end~\cite{Rao96}.
 %
-In {\asl} a plan consists of a rule of the kind \textsf{e : c <- b}.
+In {\asl}, a plan consists of a rule of the kind \textsf{e : c <- b}.
 %
 The head of a plan consists of a triggering event \textsf{e} and a
 context \textsf{c}.
@@ -23,8 +23,12 @@ context \textsf{c}.
 The triggering event specifies why the plan was triggered, i.e., the
 addition or deletion of a belief or goal.
 %
-The context specifies those beliefs that should hold in the agent's
-set of base beliefs if the plan is to be triggered.
+In the following, we refer to plans triggered by event goals
+as \emph{g-plans}, and plans triggered by
+belief change (including percepts) as \emph{e-plans}.
+%
+The context specifies those beliefs that should hold given the agent's
+current belief base if the plan is to be triggered.
 %
 The body of a plan is a sequence of actions or (sub-)goals.
 %
@@ -32,42 +36,33 @@ The body of a plan is a sequence of actions or (sub-)goals.
 %
 % THE PROBLEM
 %
-So in this approach --- as well as in planning, in general --- the
-\emph{means} to achieve a goal --- i.e., the body --- is meant to be
+In this approach --- as well as in planning, in general --- the
+\emph{means} to achieve a goal (i.e., the plan body) is meant to be
 fully specified in terms of the actions the agent should execute and
 the (sub-)goals the agent should achieve or test.
 %
-In the programming practice, however, it is often the case that the
-strategy (the means) adopted to achieve some goal (the end) would
-naturally include also \emph{reactions}, i.e., reacting to events
-asynchronously perceived from the environment, including changes about
-the beliefs.
+In practice, when programming such systems, it is often the case that
+the strategy (the means) adopted to achieve some goal (the end)
+naturally includes ractions --- i.e., reacting to events asynchronously
+perceived from the environment, including changes in the beliefs.
 % 
-That is, an agent is not reacting only to unexpected events so as to
-change/adapt its course of actions, but reactivity could be an
-effective ingredient of the strategy, of the plan adopted to achieve
-some goal.
+This reflects more than just the ability of an agent to change/adapt
+its course of actions; it allows the integration of reactivity as a
+core ingredient of the strategy to achieve some goal.
 %
-Besides the programming practice, this is often the case if we
-consider human activities too. Reactivity is a key ingredient of many
+This revised notion of a plan is not just a programming feature; it
+also occurs naturally in human activity. For example, a fisherman with
+the goal of catching fish waits for the event of a tug on their line
+indicating a fish is on the hook. Reactivity is a key ingredient of many
 activities that we perform to achieve specific goals, not only to
 handle events that represents errors or unexpected situations (for the
 current courses of actions).
 %
 It follows naturally that this is also an opportunity to extend the
-plan model so as to fully \emph{encapsulate} also reactions that are
+plan model so as to fully \emph{encapsulate} reactions that are
 part of the strategy to achieve the goal, as well as the subgoals that
 are specific to that particular goal.
 
-
-%
-%
-%
-In the following, let's refer to plans triggered by event goals
-% \texttt{+!g <- ...} 
-as \emph{g-plans}, and plans triggered by the
-belief change (including percepts) as \emph{e-plans}.
-%
 The BDI reasoning cycle automatically updates beliefs from percepts,
 and this allows us to write down structured plans with courses of
 actions that change according to the environment, by exploiting
@@ -92,7 +87,7 @@ This task can be effectively tackled using only g-plans:
 and the fact that in the reasoning cycle beliefs are automatically
 updated given new percepts.
 %
-More generally, in the {\asl} model the suggested approach to realise
+More generally, in {\asl} the suggested approach to realise
 structured activities whose flow can be environment dependent is by
 means of (sub-)goals and corresponding plans with a proper context.
 
@@ -110,30 +105,30 @@ long-term \texttt{elab} goal (it could be even an action):
 
 \begin{small}
 \begin{verbatim}
-+!elab_nums(0).
-+!elab_nums(N) : stop. 
-+!elab_nums(N) : not stop <- !elab(N); !elab_nums(N-1).
++!print_nums(0).
++!print_nums(N) : stop. 
++!print_nums(N) : not stop <- !elab(N); !print_nums(N-1).
 \end{verbatim}
 \end{small}
 
 \noindent Suppose that, realistically, we cannot spread/pollute plans
 about the goal \texttt{!elab} with a stop-dependent behaviour.
 %
-To solve this problem, using the {\asl} model and in BDI architectures
+To solve this problem, using {\asl} and in BDI architectures
 an e-plan can be introduced, using e.g. internal actions to act on the
 current ongoing intention:
 
 \begin{small}
 \begin{verbatim}
-+!elab_nums(0).
-+!elab_nums(N) <- !elab(N); !print_nums(N-1).		
-+stop <- .drop_intention(elab_nums(_)).
++!print_nums(0).
++!print_nums(N) <- !elab(N); !print_nums(N-1).		
++stop <- .drop_intention(print_nums(_)).
 \end{verbatim}
 \end{small}
 %% RHB: should we change .abort to .drop_intention ?
 
 \noindent The problem here is that the e-plan \texttt{+stop <- ... } is
-part of the strategy to achieve the goal \texttt{!elab\_nums}, however
+part of the strategy to achieve the goal \texttt{!print\_nums}, however
 it is encoded as a separate unrelated plan.
 
 % \subsection{Explicit and Implicit Goals}
@@ -148,7 +143,7 @@ One of the plans is:
 
 \begin{small}
 \begin{verbatim}
-+location(waste,X):location(robot,X) & location(bin,Y)
++location(waste,X) : location(robot,X) & location(bin,Y)
   <- pick(waste); !location(robot,Y); drop(waste).
 \end{verbatim}
 \end{small}
@@ -156,7 +151,7 @@ One of the plans is:
 \noindent That is, as soon as the robot perceives that there is a
 waste in its location, then it can pick it up and bring it to the bin.
 %
-This plan an essential brick of the overall strategy to achieve the
+This plan is an essential brick of the overall strategy to achieve the
 goal of cleaning the environment --- or to maintain the environment
 clean, in a \emph{maintenance goal} view.
 %
@@ -197,13 +192,12 @@ trace in the agent mental structures about this goal.
 This problem can also be illustrated with the following
 scenario. Consider an agent that includes a set of plans (a module
 written by a third party) to handle social obligations. The module has
-several e-plans for the different types of obligations:
+several e-plans for different types of obligations:
 \begin{small}
 \begin{verbatim}
 +obligation(Ag,committed(Goal)) : .my_name(Ag)      <- ...
 +obligation(Ag,achieve(Goal))   : .my_name(Ag)      <- ...
 -obligation(Ag,Goal) : .my_name(Ag) & .intend(Goal) <- ...
-...
 \end{verbatim}
 \end{small}
 If for some reason during its execution an agent decides not to follow
@@ -239,7 +233,7 @@ In the Jason dialect of {\asl}, we can define plans that handle the
 failure of the execution of g-plans (generating the event
 \texttt{-!g}), but not of e-plans.
 %
-So, for example, if there is a problem in the println action in:
+For example, if there is a problem in the println action in:
 
 \begin{small}
 \begin{verbatim}
@@ -305,11 +299,11 @@ plan model in the practice of agent programming:
 %\item[Runtime overhead] Each reaction (e-plans) is   new intention => new stack. 
 
 
-\noindent Besides the pure programming level, it is worth noting that
+\noindent Besides the pure programming perspective, it is worth noting that
 these issues can affect the %whose
 software engineering process for agent development.
 %%
-In particular, at the design level, it is natural to specify
+In particular, at the design perspective, it is natural to specify
 coarse-grained plans fully encapsulating the strategy to achieve or
 maintain goals.
 %
