minor changes in new parts and refs

--- a/lncs/evaluation.tex
+++ b/lncs/evaluation.tex
@@ -8,13 +8,13 @@ both  Jason~\cite{jason06}  and  ASTRA~\cite{DBLP:conf/prima/CollierRL15}\footno
 is available here: \url{https://github.com/agentspeakers/jason-er}} .
 
 %
-The Jason extension has been used to implement the examples used in this paper.
+The Jason prototype has been used to implement the examples used in this paper.
 %
 %The new language has been evaluated through a prototype implementation that builds on 
 % the ASTRA~\cite{DBLP:conf/prima/CollierRL15} language.  
 %
 %% AR
-The ASTRA extension is syntactically different  to the examples  provided in Section~\ref{sec:proposal}, 
+The ASTRA prototype uses a syntax slightly different than that used by examples provided in Section~\ref{sec:proposal}, 
 being it adapted to the syntactic style adopted in ASTRA.}
 %
 An example follows:
