--- a/lncs/main.bib
+++ b/lncs/main.bib
@@ -1,29 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Jomi Fred Hubner at 2018-05-08 22:25:46 -0300 
+
+%% Created for Jomi Hubner at 2018-11-05 16:15:53 -0200 
 
 
 %% Saved with string encoding Western (Windows Latin 1) 
 
 
+
 @inproceedings{Duff:2006:PMG:1160633.1160817,
- author = {Duff, Simon and Harland, James and Thangarajah, John},
- title = {On Proactivity and Maintenance Goals},
- booktitle = {Proceedings of the Fifth International Joint Conference on Autonomous Agents and Multiagent Systems},
- series = {AAMAS '06},
- year = {2006},
- isbn = {1-59593-303-4},
- location = {Hakodate, Japan},
- pages = {1033--1040},
- numpages = {8},
- url = {http://doi.acm.org/10.1145/1160633.1160817},
- doi = {10.1145/1160633.1160817},
- acmid = {1160817},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {agent programming languages, formal models of agency, task and resource allocation in agent systems},
-}
+	Acmid = {1160817},
+	Address = {New York, NY, USA},
+	Author = {Duff, Simon and Harland, James and Thangarajah, John},
+	Booktitle = {Proceedings of the Fifth International Joint Conference on Autonomous Agents and Multiagent Systems},
+	Doi = {10.1145/1160633.1160817},
+	Isbn = {1-59593-303-4},
+	Keywords = {agent programming languages, formal models of agency, task and resource allocation in agent systems},
+	Location = {Hakodate, Japan},
+	Numpages = {8},
+	Pages = {1033--1040},
+	Publisher = {ACM},
+	Series = {AAMAS '06},
+	Title = {On Proactivity and Maintenance Goals},
+	Url = {http://doi.acm.org/10.1145/1160633.1160817},
+	Year = {2006},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1160633.1160817},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1160633.1160817}}
 
 @incollection{RicciEPC,
 	Author = {Alessandro Ricci and Michele Piunti and Mirko Viroli and Andrea Omicini},
@@ -39,23 +42,25 @@
 
 @article{Sardina2011,
 	Author = {Sardina, Sebastian and Padgham, Lin},
+	Date-Modified = {2018-11-05 18:15:53 +0000},
 	Day = {01},
 	Journal = {Autonomous Agents and Multi-Agent Systems},
 	Month = {Jul},
 	Number = {1},
 	Pages = {18--70},
-	Title = {A BDI agent programming language with failure handling, declarative goals, and planning},
+	Title = {A {BDI} agent programming language with failure handling, declarative goals, and planning},
 	Volume = {23},
 	Year = {2011}}
 
 @inproceedings{5285116,
 	Author = {M. Dastani and B. Steunebrink},
 	Booktitle = {2009 IEEE/WIC/ACM International Joint Conference on Web Intelligence and Intelligent Agent Technology},
+	Date-Modified = {2018-11-05 18:14:26 +0000},
 	Doi = {10.1109/WI-IAT.2009.214},
 	Keywords = {Computer languages;Conferences;Encapsulation;Intelligent agent;Lifting equipment;Multiagent systems;Paper technology;Programming profession;Proposals;Terminology;BDI Programming Languages;Modularity;Multi-Agent Programming Language;Multi-Agent Systems},
 	Month = {Sept},
 	Pages = {581-584},
-	Title = {Modularity in BDI-Based Multi-agent Programming Languages},
+	Title = {Modularity in {BDI}-Based Multi-agent Programming Languages},
 	Volume = {2},
 	Year = {2009},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1109/WI-IAT.2009.214}}
