--- a/lncs/main.tex
+++ b/lncs/main.tex
@@ -33,7 +33,7 @@
 
 \begin{document}
 
-\title{AgentSpeak(ER): Enhanced Encapsulation in Agent Plans}
+\title{AgentSpeak(ER): Enhanced Encapsulation in \\Agent Plans}
 
 % put your title here!
 %\titlenote{Produces the permission block, and copyright information}
