--- a/lncs/problem.tex
+++ b/lncs/problem.tex
@@ -199,7 +199,7 @@ In the Jason dialect of {\asl}, we can define plans that handle the
 failure of the execution of g-plans (generating the event
 \texttt{-!g}), but not of e-plans.
 %
-For example, if there is a problem in the println action in:
+For example, if there is a problem in the \texttt{println} action in:
 
 \begin{small}
 \begin{verbatim}
